; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_wayland.c_wayland_egl_control.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_wayland.c_wayland_egl_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_ctx = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.vo_wayland_state* }
%struct.vo_wayland_state = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32 }

@VO_EVENT_RESIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ra_ctx*, i32*, i32, i8*)* @wayland_egl_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wayland_egl_control(%struct.ra_ctx* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.ra_ctx*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.vo_wayland_state*, align 8
  %10 = alloca i32, align 4
  store %struct.ra_ctx* %0, %struct.ra_ctx** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load %struct.ra_ctx*, %struct.ra_ctx** %5, align 8
  %12 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %11, i32 0, i32 1
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %14, align 8
  store %struct.vo_wayland_state* %15, %struct.vo_wayland_state** %9, align 8
  %16 = load %struct.ra_ctx*, %struct.ra_ctx** %5, align 8
  %17 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %16, i32 0, i32 1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @vo_wayland_control(%struct.TYPE_4__* %18, i32* %19, i32 %20, i8* %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @VO_EVENT_RESIZE, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %45

28:                                               ; preds = %4
  %29 = load %struct.ra_ctx*, %struct.ra_ctx** %5, align 8
  %30 = call i32 @resize(%struct.ra_ctx* %29)
  %31 = load %struct.ra_ctx*, %struct.ra_ctx** %5, align 8
  %32 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %9, align 8
  %35 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %34, i32 0, i32 0
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %9, align 8
  %40 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %39, i32 0, i32 0
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @ra_gl_ctx_resize(i32 %33, i32 %38, i32 %43, i32 0)
  br label %45

45:                                               ; preds = %28, %4
  %46 = load i32, i32* %10, align 4
  ret i32 %46
}

declare dso_local i32 @vo_wayland_control(%struct.TYPE_4__*, i32*, i32, i8*) #1

declare dso_local i32 @resize(%struct.ra_ctx*) #1

declare dso_local i32 @ra_gl_ctx_resize(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
